force-app/main/default/objects/Payment_Plan_Line_Item__c/Payment_Plan_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Refer to individual components or entries associated with a payment plan in the billing system.</description>
    <label>Payment Plan Line Item</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>Payment Plan Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plan Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>