force-app/main/default/objects/Payment_Plan_Line_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Autopopulated with the patient name and user should not be able to change.</description>
    <label>Patient Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Plan Line Items</relationshipLabel>
    <relationshipName>Payment_Plan_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>