force-app/main/default/objects/Payment_Plan_Line_Item__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <description>This will be autocalculated and autopopulated based on the payment collected against this particular payment installment.</description>
    <label>Amount Paid</label>
    <summarizedField>Payment_Transaction_Line_Item__c.Payment_Amount__c</summarizedField>
    <summaryForeignKey>Payment_Transaction_Line_Item__c.Payment_Plan_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>