force-app/main/default/objects/Payment_Plan_Line_Item__c/fields/Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due__c</fullName>
    <description>This will be equals to Installment Amount minus Amount Paid.</description>
    <formula>Installment_Amount__c -  Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>