force-app/main/default/objects/Payment_Plan_Line_Item__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>This will be autocalculated and autopopulated based on the  current date and payment frequency.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>