force-app/main/default/objects/Payment_Plan_Line_Item__c/fields/Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Installment_Amount__c</fullName>
    <description>This will be a autopopulated form the related payment plan.</description>
    <label>Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>