force-app/main/default/objects/Payment_Plan_Line_Item__c/fields/Last_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Amount__c</fullName>
    <description>This will be autocalculated and autopopulated based on the last payment amount.</description>
    <label>Last Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>