force-app/main/default/objects/Payment_Plan_Line_Item__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <description>This will be autocalculated andautopopulated based on the last payment date.</description>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>