force-app/main/default/objects/Payment_Plan_Line_Item__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>This will be manual input by the user and will depict any additional notes required to be added to a payment installment.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>