force-app/main/default/objects/Payment_Plan_Line_Item__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <description>Autopopulated with the related payment plan. User should not be able to change.</description>
    <label>Payment Plan Name</label>
    <referenceTo>Payment_Plan__c</referenceTo>
    <relationshipLabel>Payment Plan Line Items</relationshipLabel>
    <relationshipName>Payment_Plan_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>